[package]
name = "libdc1394-sys"
description = "FFI bindings for libdc1394"
version = "0.1.0"
authors = ["Andrew Straw <strawman@astraw.com>"]
keywords = ["libdc1394", "system", "bindings"]
license = "MIT/Apache-2.0"
repository = "https://github.com/astraw/libdc1394-sys"

build = "build.rs"
links = "dc1394"

[dependencies]
libusb-sys = "0.2"

[build-dependencies]
pkg-config = "0.3.8"
