[package]
name = "libdc1394-sys"
description = "FFI bindings for libdc1394"
version = "0.2.2"
authors = ["Andrew Straw <strawman@astraw.com>"]
keywords = ["libdc1394", "libusb", "hardware", "bindings"]
categories = ["external-ffi-bindings"]
license = "MIT/Apache-2.0"
repository = "https://github.com/astraw/libdc1394-sys"
build = "build.rs"
links = "dc1394-2"

[badges]
travis-ci = { repository = "astraw/libdc1394-sys" }

[dependencies]
libusb-sys = "0.2"
